@@ -1,3 +1,9 @@
+2003-09-06  Jeff Waugh  <jdub@perkypants.org>
+
+	* Fix some Desktop / Developer Platform comments.
+	* Point to freedesktop.org for Xft2 and fontconfig.
+	* Pulled all stops! :-)
+
 2003-09-05  Danilo Šegan  <dsegan@gmx.net>
 
 	* rni18n.xml: Replaced "English" with "American English"
